# learn-claude-code

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  pyproject.toml
learning-notes/: 2026-05-16-1825-add-read-file-tool-usage-output.md  TEMPLATE.md
mini_agent/: __init__.py  cli.py  clients.py  engine.py  messages.py  tools.py
tests/: test_agent_loop.py  test_cli.py  test_clients.py
