[project]
name = "learn-claude-code"
version = "0.1.0"
description = "A tiny Python agent framework for learning Claude Code's agent loop."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "anthropic>=0.97.0",
    "openai>=2.32.0",
]

[project.scripts]
mini-agent = "mini_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mini_agent"]
